--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Pwovèb Kreyòl</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -8,8 +9,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="descriptioon"
+      content="Random Haitian Creole sayings"
+    />
+    <meta name="title" content="Pwovèb Kreyòl" />
+    <meta
+      name="keywords"
+      content="pwoveb kreyol, haitian proverbs, proverbes creoles, proverbes haitiens, haiti proverbes, pwoveb kreyol"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -26,7 +32,20 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
+    <!-- Facebook Open Graph data -->
+    <meta property="og:title" content="Pwovèb Kreyòl" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="./logo.png" />
+    <meta property="og:image" content="Random Haitian Creole sayings generator" />
+    <meta property="og:description" content="Random Haitian Creole sayings generator" />
+
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" content="app,">
+    <meta name="twitter:site" content="http://pwovebkreyol.com">
+    <meta name="twitter:title" content="Pwovèb Kreyòl">
+    <meta name="twitter:description" content="Random Haitian Creole sayings generator">
+    <meta name="twitter:image:src" content="./logo.png">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
